-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.6, 5.3.0
-
None
-
Windows, Linux
-
cdbd3c412c62a942aa19823420ffd58de99083b1 (dev, 8.7.2014, 5.4)
When dragging an item in QListView (or any other QAbstractItemView subclass) the drop indicator doesn't react on shift key press/release. The indicator is updated only when the viewport is entered. The correct drop action is performed regardless of the shown drop indicator.
The attached example can be used to demonstrate the problem.
The problem seems to be related to QAbstractItemView::dragMoveEvent() accepting an event without setting/updating the dropAction. The drop indicator updates correctly if event->acceptProposedAction() is used instead of event->accept() in QAbstractItemView::dragMoveEvent().