Use QDropEvent::acceptProposedAction() in drop handlers of QAbstractItemView.

Fix updating of the drop cursor when the user presses/releases the
shift key while dragging.

Task-number: QTBUG-39822
Change-Id: I1d9d3a80d349f7e405db24f8f7dc372428c34f52
Reviewed-by: David Faure <david.faure@kdab.com>